@@ -140,13 +140,26 @@ class quaternion
 		quaternion& makeInverse();
 
 		//! Set this quaternion to the linear interpolation between two quaternions
-		/** \param q1 First quaternion to be interpolated.
+		/** NOTE: lerp result is *not* a normalized quaternion. In most cases 
+		you will want to use lerpN instead as most other quaternion functions expect
+		to work with a normalized quaternion.
+		\param q1 First quaternion to be interpolated.
 		\param q2 Second quaternion to be interpolated.
 		\param time Progress of interpolation. For time=0 the result is
 		q1, for time=1 the result is q2. Otherwise interpolation
-		between q1 and q2.
+		between q1 and q2. Result is not normalized.
 		*/
 		quaternion& lerp(quaternion q1, quaternion q2, f32 time);
+
+		//! Set this quaternion to the linear interpolation between two quaternions and normalize the result
+		/** 
+		\param q1 First quaternion to be interpolated.
+		\param q2 Second quaternion to be interpolated.
+		\param time Progress of interpolation. For time=0 the result is
+		q1, for time=1 the result is q2. Otherwise interpolation
+		between q1 and q2. Result is normalized.
+		*/
+		quaternion& lerpN(quaternion q1, quaternion q2, f32 time);
 
 		//! Set this quaternion to the result of the spherical interpolation between two quaternions
 		/** \param q1 First quaternion to be interpolated.
@@ -575,13 +588,19 @@ inline quaternion& quaternion::normalize()
 	return (*this *= reciprocal_squareroot ( X*X + Y*Y + Z*Z + W*W ));
 }
 
-// set this quaternion to the result of the linear interpolation between two quaternions
+// Set this quaternion to the result of the linear interpolation between two quaternions
 inline quaternion& quaternion::lerp( quaternion q1, quaternion q2, f32 time)
 {
 	const f32 scale = 1.0f - time;
 	return (*this = (q1*scale) + (q2*time));
 }
 
+// Set this quaternion to the result of the linear interpolation between two quaternions and normalize the result
+inline quaternion& quaternion::lerpN( quaternion q1, quaternion q2, f32 time)
+{
+	const f32 scale = 1.0f - time;
+	return (*this = ((q1*scale) + (q2*time)).normalize() );
+}
 
 // set this quaternion to the result of the interpolation between two quaternions
 inline quaternion& quaternion::slerp( quaternion q1, quaternion q2, f32 time, f32 threshold)
@@ -604,7 +623,7 @@ inline quaternion& quaternion::slerp( quaternion q1, quaternion q2, f32 time, f3
 		return (*this = (q1*scale) + (q2*invscale));
 	}
 	else // linear interpolation
-		return lerp(q1,q2,time);
+		return lerpN(q1,q2,time);
 }
 
 
